--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<title> BROADWAY </title>
+  <head> <title> BROADWAY </title> </head>
+    <nav> 
+     <ul>
+	 <li>
+      <a href= "homepage.html"> Homepage </a>
+       </li>
+       <li>
+      <a href= "Page 1.html"> Page 1 </a>
+       </li>
+       <li>
+      <a href= "Page 2.html"> Page 2 </a>
+         </li>
+       <li>
+      <a href= "Page 3.html"> Page 3 </a>
+         </li>
+       <li>
+      <a href= "Page 4.html"> Page 4 </a>
+         </li>
+       </ul>
+    </nav>
