--- a/page2.html
+++ b/page2.html
@@ -21,4 +21,6 @@
          </li>
        </ul>
     </nav>
-    <h1> Most Popular Broadway shows 🍿</h> 
+	
+<h1> Broadway show hangman 🍿</h> 
+	<p> Go to this python link or test out the code to play hangman!</p>
