--- a/page4.html
+++ b/page4.html
@@ -21,5 +21,4 @@
        </ul>
     </nav>
 	
-<h1> Broadway show hangman 🍿</h> 
-	<p> Go to this python link or test out the code to play hangman!</p>
+<h1> Page 4 </h1> 
