--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> <title> BROADWAY </title> </head>
+  <head> <title> All about BROADWAY 🏙 </title> </head>
     <nav> 
      <ul>
 	 <li>
