--- a/page2.html
+++ b/page2.html
@@ -8,16 +8,16 @@
       <a href= "homepage.html"> Homepage </a>
        </li>
        <li>
-      <a href= "Page 1.html"> Page 1 </a>
+      <a href= "page1.html"> Page 1 </a>
        </li>
        <li>
-      <a href= "Page 2.html"> Page 2 </a>
+      <a href= "page2.html"> Page 2 </a>
          </li>
        <li>
-      <a href= "Page 3.html"> Page 3 </a>
+      <a href= "page3.html"> Page 3 </a>
          </li>
        <li>
-      <a href= "Page 4.html"> Page 4 </a>
+      <a href= "page4.html"> Page 4 </a>
          </li>
        </ul>
     </nav>
