--- a/page4.html
+++ b/page4.html
@@ -21,4 +21,14 @@
        </ul>
     </nav>
 	
-<h1> Page 4 </h1> 
+<h1> Page 4:Attendance </h1> 
+	<table>
+		<tr>
+			<th> Years </th>
+			<th> Attendance(in millions) </th>
+		</tr>
+		<tr>
+			<d> 1984-85 </d>
+			<d> 7.25 </d>
+		</tr>
+		
