--- a/page2.html
+++ b/page2.html
@@ -22,5 +22,5 @@
        </ul>
     </nav>
 	
-<h1> Broadway show hangman 🍿</h1> 
-	<p> Go to this python link or test out the code to play hangman!</p>
+<h1> Oldies but Goodies 🍿</h1> 
+	<p> Go to this python link and test out the code to play hangman!</p>
