--- a/page2.html
+++ b/page2.html
@@ -22,5 +22,6 @@
        </ul>
     </nav>
 	
-<h1> Oldies but Goodies 🍿</h1> 
+<h1> Oldies but Goodies 🍿</h1>
+	<link href = " style.css" rel = "stylesheet" >
 	<p> Go to this python link and test out the code to play hangman!</p>
