--- a/page4.html
+++ b/page4.html
@@ -21,7 +21,8 @@
        </ul>
     </nav>
 	
-<h1> Page 4:Attendance </h1> 
+<h1> Page 4:Attendance </h1>
+	  <link href = " style.css" rel = "stylesheet" >
 	<table>
 		<tr>
 			<th> Years </th>
