--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	  <link href = " style.css" rel = "stylesheet" >
   <head> <title> All about BROADWAY 🏙 </title> </head>
     <nav> 
      <ul>
