--- a/page3.html
+++ b/page3.html
@@ -22,5 +22,6 @@
     </nav>
 	
 <h1> Page 3 </h1>
-	  <link href = " style.css" rel = "stylesheet" >
+	<link href = " style.css" rel = "stylesheet" >
+	<p> This is a test </p> 
 
