--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
   
 <!DOCTYPE html>
 <html lang="en">
-  <head> <title> BROADWAY </title> </head>
+  <head> <title> All about BROADWAY 🏙 </title> </head>
     <nav> 
      <ul>
 	 <li>
