--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head> <title> All about BROADWAY 🏙 </title> </head>
 	<link href = " style.css" rel = "stylesheet" >
+<body> 
     <nav> 
      <ul>
 	 <li>
@@ -21,3 +22,5 @@
          </li>
        </ul>
     </nav>
+<p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway!</p>
+	</body> 
