--- a/homepage.html
+++ b/homepage.html
@@ -23,4 +23,6 @@
        </ul>
     </nav>
 <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway!</p>
-	</body> 
+<div class= "sidebar">
+	<p1> This is where the timeline is?</p1>
+</body> 
