--- a/homepage.html
+++ b/homepage.html
@@ -24,5 +24,5 @@
     </nav>
 <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway!</p>
 <div class= "sidebar">
-	<p1> This is where the timeline is?</p1>
+	<p1> This is where the timeline is?</p1> </div> 
 </body> 
