--- a/page1.html
+++ b/page1.html
@@ -22,5 +22,6 @@
        </ul>
     </nav>
 	
-<h1> PAGE 1 WIP </h1>
-	 <link href = " style.css" rel = "stylesheet" >
+<h1> Oldies but Goodies 🍿</h1>
+	<link href = " style.css" rel = "stylesheet" >
+	<p> Go to this python link and test out the code to play hangman!</p>
