--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
        </ul>
     </nav>
 <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway!</p>
-	<img src = "https://th.bing.com/th/id/Ra251125ec6e4002ff3bfd268a6aa0405?rik=Q1t4dApTHeYS0Q&riu=http%3a%2f%2fwww.ambiance-sticker.com%2fimages%2fImage%2fSB_01824_1391518905.png&ehk=7GEDx9JmTOh98IPOgl87mHKVFE5cCjbA%2bClvPc866rs%3d&risl=&pid=ImgRaw" height= 900 px width=300 px float:right;>
+	<img src = "https://th.bing.com/th/id/Ra251125ec6e4002ff3bfd268a6aa0405?rik=Q1t4dApTHeYS0Q&riu=http%3a%2f%2fwww.ambiance-sticker.com%2fimages%2fImage%2fSB_01824_1391518905.png&ehk=7GEDx9JmTOh98IPOgl87mHKVFE5cCjbA%2bClvPc866rs%3d&risl=&pid=ImgRaw" height= 900 px float:left;>
 <div class= "sidebar">
 	<p1> This is where the timeline is?</p1> </div> 
 </body> 
