--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head> <title> All about BROADWAY 🏙 </title> </head>
 	<link href = " style.css" rel = "stylesheet" >
+<div> class= "header">
+	<h1> HEADER </h1>
+</div>
+	
 <body> 
     <nav> 
      <ul>
@@ -25,5 +29,6 @@
 <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway!</p>
 	<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Broadway_(9072763327).jpg/1280px-Broadway_(9072763327).jpg" float:right;>
 <div class= "sidebar">
-	<p1> This is where the timeline is?</p1> </div> 
+	<p1> This is where the timeline is?</p1> 
+</div> 
 </body> 
