--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head> <title> All about BROADWAY 🏙 </title> </head>
 	<link href = " style.css" rel = "stylesheet" >
-<div> class= "header">
+<div class= "header">
 	<h1> HEADER </h1>
 </div>
 	
