--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,9 @@
          </li>
        </ul>
     </nav>
-	
+<div class= "header">
+	<h1> HEADER </h1>
+</div>
 <h1> Oldies but Goodies 🍿</h1>
 	<link href = " style.css" rel = "stylesheet" >
 	<p> Go to this python link and test out the code to play hangman!</p>
