--- a/page3.html
+++ b/page3.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head> <title> All about BROADWAY 🏙 </title> </head>
+<div class= "header">
+	<h1> HEADER </h1>
+</div>
     <nav> 
      <ul>
 	 <li>
