--- a/homepage.html
+++ b/homepage.html
@@ -27,14 +27,13 @@
        </ul>
     </nav>
 	<div class= "sidebar">	
-		<p1> This is where the timeline is?
-			-
-			-
-			-
-			-
-			-
-			-
-		</p1> 
+		<p1> This is where the timeline is?</p1> 
+		<p>-</p>
+		<p>-</p>
+		<p>-</p>
+		<p>-</p>
+		<p>-</p>
+	
 	</div> 
 <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway!</p>
 <img src = "https://i.pinimg.com/originals/fc/0f/64/fc0f6402686a9dc53264de9545c3ecb2.jpg" float:right;>
