--- a/homepage.html
+++ b/homepage.html
@@ -36,6 +36,6 @@
 	
 	</div> 
 <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway </p>
-<img src = "https://i.pinimg.com/originals/fc/0f/64/fc0f6402686a9dc53264de9545c3ecb2.jpg" float:right;>
+<img src = "https://i.pinimg.com/originals/fc/0f/64/fc0f6402686a9dc53264de9545c3ecb2.jpg" style=" float:right";>
 
 </body> 
