--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,9 @@
 		<p>-</p>
 	
 	</div> 
-<p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway </p>
+<div class= "home">
+     <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway </p>
+</div> 
 <img src = "https://i.pinimg.com/originals/fc/0f/64/fc0f6402686a9dc53264de9545c3ecb2.jpg" style=" float:left";>
 
 </body> 
