--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
        </ul>
     </nav>
 	<div class= "sidebar">	
-		<p1> Timeline</p1> 
+		<p1> Links for References</p1> 
 		<p>-</p>
 		<p>-</p>
 		<p>-</p>
