--- a/page1.html
+++ b/page1.html
@@ -28,3 +28,16 @@
 <h1> Oldies but Goodies 🍿</h1>
 	<link href = " style.css" rel = "stylesheet" >
 	<p> Go to this python link and test out the code to play hangman!</p>
+	<p> https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman</p>
+	
+	
+	<div class= "code">
+		<p> import random </p>
+		<p> listofshows=["Mister Roberts","Death of a Salesman","South Pacific","Guys and Dolls", "The King and I", "Wonderful Town",
+      "The Pajama Game", "My Fair Lady","West Side Story", "The Music Man","The Sound of Music",
+      "Bye Bye Birdie", "A Man for All Seasons", "Hello, Dolly", "Fiddler on the Roof", "Cabaret", "Hallelujah Baby", "Applause", "Company", 
+       "Over Here","The Wiz", "A Chorus Line", "Annie","Sweeney Todd", "Evita", "Dreamgirls",
+      "Cats", "Biloxi Blues", "Song and Dance", "Me and My Girl", "Les Miserables",
+      "The Phantom of the Opera", "Miss Saigon", "Crazy for You","Angles in America","Passion", "Sunset Boulevard", "Rent", "Titanic", "The Lion King", "Fosse", "Kiss Me Kate"]</p>
+	</div>
+ 
