--- a/page1.html
+++ b/page1.html
@@ -31,7 +31,7 @@
 	<p> https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman</p>
 	
 	
-	
+	<div class=  "code>
 		<p1> import random </p1>
 		<p1> listofshows=["Mister Roberts","Death of a Salesman","South Pacific","Guys and Dolls", "The King and I", "Wonderful Town",
       "The Pajama Game", "My Fair Lady","West Side Story", "The Music Man","The Sound of Music",
@@ -39,5 +39,5 @@
        "Over Here","The Wiz", "A Chorus Line", "Annie","Sweeney Todd", "Evita", "Dreamgirls",
       "Cats", "Biloxi Blues", "Song and Dance", "Me and My Girl", "Les Miserables",
       "The Phantom of the Opera", "Miss Saigon", "Crazy for You","Angles in America","Passion", "Sunset Boulevard", "Rent", "Titanic", "The Lion King", "Fosse", "Kiss Me Kate"]</p1>
-
+</div> 
  
