--- a/page1.html
+++ b/page1.html
@@ -27,7 +27,8 @@
 	
 <h1> Oldies but Goodies 🍿</h1>
 	<link href = " style.css" rel = "stylesheet" >
-	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman " > Go to this python link and test out the code to play hangman! </a></P> 
+	<p>Go to this python link and test out the code to play hangman</p>
+	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman " > Hangman </a></P> 
 	
 	<div class=  "code>
 		<p1> import random </p1>
