--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
     </nav>
 	<div class= "sidebar">	
 		<p1> Links for References</p1> 
-		<p>-</p>
+		<p>-</p> <p><a href = " Broadway Grosses | Playbill" > Broadway Grosses | Playbill </a></P> 
 		<p>-</p>
 		<p>-</p>
 		<p>-</p>
