--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
     </nav>
 	<div class= "sidebar">	
 		<p1> Links for References</p1> 
-		<p>-</p> <p><a href = " Broadway Grosses | Playbill" > Broadway Grosses | Playbill </a></P> 
+		<p>-</p> <p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > Broadway Grosses | Playbill </a></P> 
 		<p>-</p>
 		<p>-</p>
 		<p>-</p>
