--- a/homepage.html
+++ b/homepage.html
@@ -28,11 +28,9 @@
     </nav>
 	<div class= "sidebar">	
 		<p1> Links for References</p1> 
-		<p>-</p> <p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > Broadway Grosses | Playbill </a></P> 
-		<p>-</p>
-		<p>-</p>
-		<p>-</p>
-		<p>-</p>
+		<p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > 💸Broadway Grosses | Playbill </a></P> 
+		<p><a href = " https://www.broadwayleague.com/research/statistics-broadway-nyc/" > 🎫Statistics - Broadway in NYC | The Broadway League </a></P> 
+		<p><a href = " https://bestlifeonline.com/most-popular-broadway-shows-by-year/" >🎟 The Hardest Broadway Ticket to Score the Year You Were Born | Best Life (bestlifeonline.com) </a></P> 
 	
 	</div> 
 <div class= "home">
