--- a/homepage.html
+++ b/homepage.html
@@ -27,6 +27,8 @@
        </ul>
     </nav>
 	<div class= "sidebar">	
+		<p1> Files:</p1> 
+		
 		<p1> Links for References:</p1> 
 		<p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > 💸Broadway Grosses | Playbill </a></P> 
 		<p><a href = " https://www.broadwayleague.com/research/statistics-broadway-nyc/" > 🎫Statistics - Broadway in NYC | The Broadway League </a></P> 
@@ -36,6 +38,7 @@
 <div class= "home">
      <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway </p>
 </div> 
-<img src = "https://i.pinimg.com/originals/fc/0f/64/fc0f6402686a9dc53264de9545c3ecb2.jpg" style=" float:left";>
-
+<div class= "instruct">
+     <p> instructions/ how it works  </p>
+</div> 
 </body> 
