--- a/page4.html
+++ b/page4.html
@@ -24,7 +24,7 @@
        </ul>
     </nav>
 	
-<h1> Page 4:Attendance </h1>
+<h1> Page 4:Attendance 🎫</h1>
 	  <link href = " style.css" rel = "stylesheet" >
 	<table>
 		<tr>
