--- a/homepage.html
+++ b/homepage.html
@@ -37,9 +37,11 @@
 	
 	</div> 
 <div class= "home">
-     <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway </p>
+     <p> Chloe Huang  </p>
+      <p> Period 9 </p>
 </div> 
 <div class= "instruct">
+     <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway</p>
      <p> instructions/ how it works  </p>
 </div> 
 </body> 
