--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
        </ul>
     </nav>
 	<div class= "sidebar">	
-		<p1> Files: </p1> 
+		<p1> <b> Files: </b> </p1> 
 		<p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > 💸Broadway Grosses | Playbill </a></P> 
 		<p><a href = " https://www.broadwayleague.com/research/statistics-broadway-nyc/" > 🎫Statistics - Broadway in NYC | The Broadway League </a></P> 
 		<p2> Links for References:</p2> 
