--- a/homepage.html
+++ b/homepage.html
@@ -28,8 +28,8 @@
     </nav>
 	<div class= "sidebar">	
 		<p1> <b> Files: </b> </p1> 
-		<p><a href = " https://chloekh9.github.io/final/homepage.html" > This is the html file</a></P> 
-		<p><a href = " https://github.com/ChloeKH9/Finalproject-python" > Collection of python codes </a></P> 
+		<p><a href = " https://github.com/ChloeKH9/final" > 💻This is the HTML file</a></P> 
+		<p><a href = " https://github.com/ChloeKH9/Finalproject-python" > 👩‍💻Collection of python codes </a></P> 
 		<p2><b> Links for References: </b></p2> 
 		<p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > 💸Broadway Grosses | Playbill </a></P> 
 		<p><a href = " https://www.broadwayleague.com/research/statistics-broadway-nyc/" > 🎫Statistics - Broadway in NYC | The Broadway League </a></P> 
