--- a/homepage.html
+++ b/homepage.html
@@ -42,6 +42,6 @@
 </div> 
 <div class= "instruct">
      <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway</p>
-     <p> instructions/ how it works  </p>
 </div> 
+<h1> instructions/ how it works  </h1>
 </body> 
