--- a/homepage.html
+++ b/homepage.html
@@ -43,5 +43,6 @@
 <div class= "instruct">
      <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway</p>
 </div> 
-<h1> instructions/ how it works  </h1>
+<h1> • Instructions/ Overview </h1>
+<h1> • Bugs and errors </h1>
 </body> 
