--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,6 @@
          </li>
        </ul>
     </nav>
-<h1> Oldies but Goodies 🍿</h1>
+<h1> Awards 🎶</h1>
 	<link href = " style.css" rel = "stylesheet" >
-	<p> Go to this python link and test out the code to play hangman!</p>
+	<p> Working with dictionaries</p>
