--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,7 @@
 	<p>Go to this python link and test out the code to play hangman</p>
 	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman " > Hangman </a></P> 
 <div class= "home">
-     <p> Chloe Huang  </p>
+	<p> <b> Description </b></p>
 </div> 	
 
  
