--- a/homepage.html
+++ b/homepage.html
@@ -37,8 +37,8 @@
 	
 	</div> 
 <div class= "home">
-     <p> Chloe Huang  </p>
-      <p> Period 9 </p>
+     <p> Name: Chloe Huang  </p>
+      <p> Period: 9 </p>
 </div> 
 <div class= "instruct">
      <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway</p>
