--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,8 @@
 	<p>Go to this python link and test out the code to play hangman</p>
 	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman " > Hangman </a></P> 
 <div class= "home">
-	<p> <b> Description </b></p>
+	<p> <b> Description: </b></p>
+	<p> Hangman is a simple game where letters are guessed to form a word. This code has a list of shows that are selected at random. First, blank bars are printed in a list to match the chosen word. The user is able to input a letter which the program then checks if it’s in the word. If it is, it’ll loop through the word, find where the letter is, and set the bar equal to the guess. There’s also two lists, one for correct guesses and one for incorrect ones, that will contain letters as the player continues to guess. There are 14 chances, so if the user does not guess the whole thing by the time the chances hit zero, the player loses. </p>
 </div> 	
 
  
