--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
 		<p><a href = " https://bestlifeonline.com/most-popular-broadway-shows-by-year/" >🎟 The Hardest Broadway Ticket to Score the Year You Were Born | Best Life (bestlifeonline.com) </a></P> 
 	
 	</div> 
-<div class= "home">
+<div class= "page">
      <p> Name: Chloe Huang  </p>
       <p> Period: 9 </p>
 </div> 
