--- a/page4.html
+++ b/page4.html
@@ -28,7 +28,7 @@
 	  <link href = " style.css" rel = "stylesheet" >
 	<div class= "home">
 	<p> <b> Description: </b></p>
-	<p> Hangman is a simple game where letters are guessed to form a word. This code has a list of shows that are selected at random. First, blank bars are printed in a list to match the chosen word. The user is able to input a letter which the program then checks if it’s in the word. If it is, it’ll loop through the word, find where the letter is, and set the bar equal to the guess. There’s also two lists, one for correct guesses and one for incorrect ones, that will contain letters as the player continues to guess. There are 14 chances, so if the user does not guess the whole thing by the time the chances hit zero, the player loses. </p>
+	<p> Just like what we did in the lab, I used a csv file of attendance data I compiled. I had to split it by indents and commas which then allowed me to sort the data into lists for years and number of people. Initially, the attendance numbers taken from the website were more exact, but I had to round it to convert the strings into integers. It then takes these two lists and plots them in a bar graph. The list of years and attendance print out duplicates, but it doesn’t seem to affect the bar graph.  </p>
 </div>
 	<table>
 		<tr>
