--- a/homepage.html
+++ b/homepage.html
@@ -34,8 +34,8 @@
 		<p><a href = " https://www.google.com/url?q=https://www.playbill.com/grosses?utm_source%3Dvault%26utm_medium%3Dpromo%26utm_campaign%3Dpopularlinks&sa=D&source=editors&ust=1623349135022000&usg=AOvVaw0xxKgPC5YGAeutL2AEag_z" > 💸Broadway Grosses | Playbill </a></P> 
 		<p><a href = " https://www.broadwayleague.com/research/statistics-broadway-nyc/" > 🎫Statistics - Broadway in NYC | The Broadway League </a></P>
                 <p><a href = " https://www.playbill.com/article/the-17-most-tony-award-winning-works-of-all-time" > 🎭The 17 Most Tony Award-Winning Works of All Time | Playbill </a></P> 
-		<p><a href = " https://bestlifeonline.com/most-popular-broadway-shows-by-year/" >🎟 The Hardest Broadway Ticket to Score the Year You Were Born | Best Life (bestlifeonline.com) </a></P> 
-	
+		<p><a href = " https://bestlifeonline.com/most-popular-broadway-shows-by-year/"🎟The Hardest Broadway Ticket to Score the Year You Were Born | Best Life (bestlifeonline.com) </a></P> 
+	        <p><a href = "https://www.statista.com/statistics/198306/average-paid-admission-at-broadway-shows-since-2006/" > 🎼Average paid admission at Broadway shows NY 2007-2019 | Statista </a></P> 
 	</div> 
 <div class= "page">
      <p> Name: Chloe Huang  </p>
