--- a/homepage.html
+++ b/homepage.html
@@ -45,6 +45,6 @@
      <p> Welcome to my site! This website will take you through multiple python codes all relating to the world of broadway</p>
 </div> 
 <h1> • Instructions/ Overview </h1>
-<p>My project focuses on different data about Broadway that I’ve compiled such as prices of tickets and audiences. It was surprisingly easy to find a lot of information so it came down to how I would apply it. Through a bunch of different codes, I focused on different things we’ve learned throughout the semester. </p>
+<p>My project focuses on different data about Broadway that I’ve compiled such as prices of tickets and audiences. It was surprisingly easy to find a lot of information so it came down to how I would apply it. Through a bunch of different codes, I focused on different things we’ve learned throughout the semester. Go through each page to learn more.</p>
 <h1> • Bugs and errors </h1>
 </body> 
