--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head> <title> All about BROADWAY 🏙 </title> </head>
 	<link href = " style.css" rel = "stylesheet" >
 <div class= "header">
-	<h1> HEADER </h1>
+	<h1> That's a wrap! </h1>
 </div>
 	
 <body> 
