--- a/page3.html
+++ b/page3.html
@@ -26,7 +26,7 @@
 	
 <h1> Page 3 </h1>
 	<link href = " style.css" rel = "stylesheet" >
-	<p> This is a test </p>
+	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/prices " > Code for admission prices </a></P> 
 	<div class= "home">
 	<p> <b> Description: </b></p>
 	<p> I plotted three different variables on a line graph: prices of musicals, plays and special tickets. The years range from 2007 to 2018 and they act as the x-axis. Afterwards, the user can input a year and type to call specific information. However, I didn’t put a system to correct if the user inputs something out of the list or spells it wrong, so it’ll simply return an error if that occurs.   </p>
