--- a/page2.html
+++ b/page2.html
@@ -26,6 +26,7 @@
     </nav>
 <h1> Awards 🎶</h1>
 	<link href = " style.css" rel = "stylesheet" >
+	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/awards " > Code for awards </a></P> 
 	<div class= "home">
 	<p> <b> Description: </b></p>
 	<p> Taking things I found on a playbill website, I created two lists, one for shows and another for the number of Tony awards. Then I sorted it into dictionaries, one with the names set as key and the values as the numbers. The second function groups the shows with the same number of awards.  </p>
