--- a/page4.html
+++ b/page4.html
@@ -26,6 +26,7 @@
 	
 <h1> Page 4:Attendance 🎫</h1>
 	  <link href = " style.css" rel = "stylesheet" >
+	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/attendancegraph " > Attendance graph </a></P> 
 	<div class= "home">
 	<p> <b> Description: </b></p>
 	<p> Just like what we did in the lab, I used a csv file of attendance data I compiled. I had to split it by indents and commas which then allowed me to sort the data into lists for years and number of people. Initially, the attendance numbers taken from the website were more exact, but I had to round it to convert the strings into integers. It then takes these two lists and plots them in a bar graph. The list of years and attendance print out duplicates, but it doesn’t seem to affect the bar graph.  </p>
