--- a/page1.html
+++ b/page1.html
@@ -25,7 +25,7 @@
        </ul>
     </nav>
 	
-<h1> Oldies but Goodies 🍿</h1>
+<h1> Hangman 🍿</h1>
 	<link href = " style.css" rel = "stylesheet" >
 	<p>Go to this python link and test out the code to play hangman</p>
 	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/hangman " > Hangman </a></P> 
