--- a/page3.html
+++ b/page3.html
@@ -24,7 +24,7 @@
        </ul>
     </nav>
 	
-<h1> Page 3 </h1>
+<h1> Page 3: Admission 🎼</h1>
 	<link href = " style.css" rel = "stylesheet" >
 	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/prices " > Code for admission prices </a></P> 
 	<div class= "home">
