--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
          </li>
        </ul>
     </nav>
-<h1> Page 2: Awards 🎶</h1>
+<h1> Page 2: Awards🎭 </h1>
 	<link href = " style.css" rel = "stylesheet" >
 	<p><a href = " https://github.com/ChloeKH9/Finalproject-python/blob/main/awards " > Code for awards </a></P> 
 	<div class= "home">
