--- a/homepage.html
+++ b/homepage.html
@@ -47,4 +47,6 @@
 <h1> • Instructions/ Overview </h1>
 <p>My project focuses on different data about Broadway that I’ve compiled such as prices of tickets and audiences. It was surprisingly easy to find a lot of information so it came down to how I would apply it. Through a bunch of different codes, I focused on different things we’ve learned throughout the semester. Go through each page to learn more.</p>
 <h1> • Bugs and errors </h1>
+<p>The Years and Attendance lists print with duplicates, although currently I don’t have it printing out in my code </p>
+<p>The codes that require input don’t have systems to correct errors </p>
 </body> 
