--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
     <nav> 
      <ul>
 	 <li>
-      <a href= "homepage.html"> Homepage </a>
+      <a href= "final.html"> Homepage </a>
        </li>
        <li>
       <a href= "page1.html"> Page 1 </a>
